<resources>
    <string name="app_name">Imageprocessing</string>
    <string name="title_activity_video_viewing">VideoViewingActivity</string>
    <string name="label_pipeline">Pipeline</string>
    <string name="label_effects">Effects</string>
    <string name="label_applied">Applied</string>
    <string name="title_activity_pipeline_editing">Pipeline Editor</string>
    <string name="clear_pipeline">Clear Pipe</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_ok">Ok</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="ip_address">IP Address</string>
    <string name="port_num">Port Number</string>
    <string name="label_offload">Offload</string>
    <string name="label_compress">Compress</string>
    <string name="uploadBandwidth">N/A</string>
    <string name="downloadBandwidth">N/A</string>
    <string name="hostCpuUtil">N/A</string>
    <string name="serverCpuUtil">N/A</string>
    <string name="label_iperf">iperf</string>
    <string name="label_openIperfLog">perf log</string>

    <string name="title_activity_iperf_log_viewer">IperfLogViewerActivity</string>
    <string name="label_traceview">traceview</string>
</resources>
