<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/availEffects"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_effects"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <HorizontalScrollView
                    android:id="@+id/horizontalScrollView1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/textView2">

                    <LinearLayout
                        android:id="@+id/effectsLinearLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal" />
                </HorizontalScrollView>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/appliedEffects"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_applied"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <HorizontalScrollView
                    android:id="@+id/horizontalScrollView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/textView1">

                    <LinearLayout
                        android:id="@+id/pipelinesLinearLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal" />
                </HorizontalScrollView>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <RelativeLayout
                android:id="@+id/availCompress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_compress"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <HorizontalScrollView
                    android:id="@+id/horizontalScrollView3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/textView9">

                    <LinearLayout
                        android:id="@+id/compressLinearLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal" />
                </HorizontalScrollView>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/appliedCompress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_applied"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <HorizontalScrollView
                    android:id="@+id/horizontalScrollView0"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_toEndOf="@id/textView8">

                    <LinearLayout
                        android:id="@+id/compressesLinearLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal" />
                </HorizontalScrollView>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <RelativeLayout
                android:id="@+id/cloudEnableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_offload"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <CheckBox
                    android:id="@+id/enableOffloading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/textView3"
                    android:onClick="onOffloadChecked" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/destinationFields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/ip_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:digits="0123456789."
                    android:hint="@string/ip_address"
                    android:imeOptions="actionNext"
                    android:inputType="number|numberDecimal" />

                <EditText
                    android:id="@+id/PortNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:digits="0123456789"
                    android:hint="@string/port_num"
                    android:imeOptions="actionDone"
                    android:inputType="number" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/buttonBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0">

        <Button
            android:id="@+id/button_edit_pipeline_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:onClick="onPipeClearClicked"
            android:text="@string/clear_pipeline" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true">

            <Button
                android:id="@+id/button_edit_pipeline_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCancelClicked"
                android:text="@string/label_cancel" />

            <Button
                android:id="@+id/button_edit_pipeline_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/button_edit_pipeline_cancel"
                android:onClick="onOkClicked"
                android:text="@string/label_ok" />
        </RelativeLayout>

    </RelativeLayout>
</LinearLayout>
